--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "java.project.referencedLibraries": [
         "lib/**/*.jar",
-        "ProyectoFS/lib/sqlite-jdbc-3.40.0.0.jar"
+        "ProyectoFS/lib/sqlite-jdbc-3.40.0.0.jar",
+        "ProyectoFS/lib/itextpdf-5.4.1.jar"
     ]
 }
